task02/iptables.rules
# Generated by iptables-save v1.8.10 (nf_tables) on Tue Nov 18 12:53:17 2025
*raw
:PREROUTING ACCEPT [27462:6232042]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -d 172.17.0.2/32 ! -i docker0 -j DROP
COMMIT
# Completed on Tue Nov 18 12:53:17 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Tue Nov 18 12:53:17 2025
*filter
:INPUT DROP [15:900]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1982:274475]
:IN_SSH - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j IN_SSH
-A OUTPUT -o lo -j ACCEPT
-A IN_SSH -p tcp -m tcp --dport 22 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A IN_SSH -p tcp -m tcp --dport 22 -m set --match-set my_subnets src -m conntrack --ctstate NEW -j ACCEPT
-A IN_SSH -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "Iptables: SSH_attack: " --log-level 6
COMMIT
# Completed on Tue Nov 18 12:53:17 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Tue Nov 18 12:53:17 2025
*nat
:PREROUTING ACCEPT [136:9357]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [261:18670]
:POSTROUTING ACCEPT [260:18594]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-e553d747ef2e -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i br-e553d747ef2e -j RETURN
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 172.17.0.2:80
COMMIT
# Completed on Tue Nov 18 12:53:17 2025
